--- a/.travis.yml
+++ b/.travis.yml
@@ -62,6 +62,9 @@ before_install:
     # https://github.com/travis-ci/travis-ci/issues/8613
     - if [[ $TRAVIS_OS_NAME == 'linux' && $CXX == 'clang++' ]]; then export LD_LIBRARY_PATH=/usr/local/clang/lib:$LD_LIBRARY_PATH; fi
 
+    # Homebrew issue (https://stackoverflow.com/questions/54888582/ruby-cannot-load-such-file-active-support-core-ext-object-blank)
+    - if [ $TRAVIS_OS_NAME == osx ]; then brew update-reset; fi
+
     # homebrew Python stuff...
     - if [ $TRAVIS_OS_NAME == osx ]; then brew upgrade python; fi
     - if [ $TRAVIS_OS_NAME == osx ]; then brew install python@2; fi
