--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,8 @@ configuration:
 environment:
   matrix:
   # #- platform: mingw64720x8664
-  - platform: mingw64630x8664
+  #- platform: mingw64630x8664
+  - platform: mingw64810x8664
   - platform: mingw64630i686
   # #- platform: mingw64730x8664
    
@@ -45,6 +46,12 @@ install:
       {
         #"x86_64-7.3.0-posix-seh-rt_v5-rev0"
         $env:GCC="x86_64-7.3.0-posix-seh-rt_v5-rev0"
+        $env:MSYSTEM="MINGW64" ; $env:mname="mingw64" ; $env:arch="x86_64"
+      }
+      elseif ($env:platform -Match "mingw64810x8664") 
+      {
+        #"x86_64-8.1.0-posix-seh-rt_v6-rev0"
+        $env:GCC="x86_64-8.1.0-posix-seh-rt_v6-rev0"
         $env:MSYSTEM="MINGW64" ; $env:mname="mingw64" ; $env:arch="x86_64"
       }
       #"x86_64-7.3.0-posix-seh-rt_v5-rev0"
