--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,8 @@ environment:
   # #- platform: mingw64720x8664
   #- platform: mingw64630x8664
   - platform: mingw64810x8664
-  - platform: mingw64630i686
+  - platform: mingw64630x8664
+  # - platform: mingw64630i686
   # #- platform: mingw64730x8664
    
 matrix:
@@ -344,7 +345,7 @@ build_script:
       }
   # Given that a GM-Q32 directory will not be present in mingw/, GMNAME can be anything to trigger inclusion
   # in the appveyor_gdl build: The distribution is created in appveyor_1.msys from the repo.
-  - set GMNAME=GraphicsMagick-1.3.27
+  - set GMNAME=GraphicsMagick-1.3.30
   - PowerShell c:\projects\gdl\scripts\ps1\make_gdl.ps1
   # Any message sent to stderr in appeyor.yml can be counted as an error, unless it is generated in 
   # a script.  Hence make_gdl.ps1, and only real hang-ups are failures.
