just gcc8.1 for x86_64; if success, then try gcc6.3 with i686

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,9 +10,8 @@ environment:
   matrix:
   # #- platform: mingw64720x8664
   #- platform: mingw64630x8664
-  - platform: mingw64630x8664
   - platform: mingw64810x8664
-  # - platform: mingw64630i686
+  - platform: mingw64630i686
   # #- platform: mingw64730x8664
    
 matrix:
