--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,9 +10,9 @@ environment:
   matrix:
   # #- platform: mingw64720x8664
   #- platform: mingw64630x8664
+  #- platform: mingw64630i686
   - platform: mingw64810x8664
-  - platform: mingw64630i686
-  # #- platform: mingw64730x8664
+  - platform: mingw64730x8664
    
 matrix:
   fast_finish: true
@@ -54,7 +54,9 @@ install:
         $env:GCC="x86_64-8.1.0-posix-seh-rt_v6-rev0"
         $env:MSYSTEM="MINGW64" ; $env:mname="mingw64" ; $env:arch="x86_64"
       }
-      #"x86_64-7.3.0-posix-seh-rt_v5-rev0"
+     #
+       $env:LOCALM32="c:/projects/gdl/mingw/$env:mname"
+
   #- ps: $env:allmsys=$true ; $env:domingw=$false  ineffective!     
   - ps: |
       if ($true)
@@ -65,8 +67,8 @@ install:
         md c:\projects\gdl\mingw
         md c:\projects\gdl\build ;  $env:BLDDIR="c:\projects\gdl\build"
         cd c:\projects\gdl\win32libs
-        $env:CC="C:/mingw-w64/$env:GCC/$env:mname/bin/gcc"
-        $env:CXX="C:/mingw-w64/$env:GCC/$env:mname/bin/g++"
+        #$env:CC="C:/mingw-w64/$env:GCC/$env:mname/bin/gcc"
+        #$env:CXX="C:/mingw-w64/$env:GCC/$env:mname/bin/g++"
         $env:DOTIFF="ON"
         $env:DOGEOTIFF="ON"
         $env:platform=""
@@ -79,10 +81,8 @@ install:
         $env:GMNAME="GraphicsMagick-1.3.30"
         #$env:WXNAME="wxWidgets-3.0.2-17"
         $env:WXNAME="wxWidgets-3.0.4-2"
-        $env:LOCALM32="c:/projects/gdl/mingw/$env:mname"
         c:/msys64/usr/bin/bash.exe -lc 'cd $OLDPWD &&. ./scripts/appveyor_1.msys'
         cd c:/projects/gdl/mingw
-        ls $env:mname/bin
         rm mingw-w64-*tar.xz
         cd c:\projects\gdl\win32libs
         appveyor DownloadFile `
@@ -328,24 +328,26 @@ before_build:
 
   - ps: cd  C:\projects\gdl
 build_script:
-  - ps: $env:GMNAME=""
+  #- ps: $env:GMNAME=""
+  - ps: $env:CC=""  ;  $env:CXX=""
   # the MSYS script in win32 will build a 32-bit GraphicsMagick distro on a healthy MSYS system
   # but it won't for appveyor.  So, GMNAME="" to quash it and move on, the repo distribution created by
   # appveyor_1.msys will be there for 8-bit images. 
+  #         $env:GMNAME="GraphicsMagick-1.3.30" is a hardwired name of bld_gm32 and so it is the only distro allowed to be built here.
   - ps: |
       if ( "x$env:GMNAME" -eq "x")
       {
       echo "No graphicsmagick build attempted "
       }
-      else
+      elseif($env:GMNAME -eq   "GraphicsMagick-1.3.30")
       {
       echo " $env:GMNAME: 32-bit Quantum GraphicsMagick "
-      echo " $env:GMNAME "
-      cmd /c C:\msys64\usr\bin\bash.exe -lc "cd /c/projects/gdl && ./scripts/win32/bld_gm32.msys" 2>$null
+      echo " $env:GMNAME  $env:MSYSTEM"
+      C:\msys64\usr\bin\bash.exe -lc "cd /c/projects/gdl &&. ./scripts/win32/bld_gm32.msys" 2> gm_bld.log
       }
   # Given that a GM-Q32 directory will not be present in mingw/, GMNAME can be anything to trigger inclusion
   # in the appveyor_gdl build: The distribution is created in appveyor_1.msys from the repo.
-  - set GMNAME=GraphicsMagick-1.3.30
+  #- set GMNAME=GraphicsMagick-1.3.27
   - PowerShell c:\projects\gdl\scripts\ps1\make_gdl.ps1
   # Any message sent to stderr in appeyor.yml can be counted as an error, unless it is generated in 
   # a script.  Hence make_gdl.ps1, and only real hang-ups are failures.
