adding TEST_SORT in the list of tests

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -201,6 +201,7 @@ TESTS = \
   test_sem.pro \
   test_simplex.pro \
   test_size.pro \
+  test_sort.pro \
   test_spawn_unit.pro \
   test_spher_harm.pro \
   test_spl_init.pro \
