--- a/.travis.yml
+++ b/.travis.yml
@@ -5,27 +5,27 @@ matrix:
   include:
 #    - os: linux
 #      env: COMPILER=icc   CMAKE_BUILD_TYPE=Debug    DEPS=MINI
-    - os: linux
-      env: COMPILER=gcc   CMAKE_BUILD_TYPE=Debug    DEPS=MINI
+##    - os: linux
+##      env: COMPILER=gcc   CMAKE_BUILD_TYPE=Debug    DEPS=MINI
     - os: osx
       env: COMPILER=clang CMAKE_BUILD_TYPE=Debug    DEPS=MINI
 
-    - os: linux
-      env: COMPILER=icc   CMAKE_BUILD_TYPE=Debug    DEPS=FULL
-    - os: linux
-      env: COMPILER=gcc   CMAKE_BUILD_TYPE=Debug    DEPS=FULL  CODECOV=yes
+##    - os: linux
+##      env: COMPILER=icc   CMAKE_BUILD_TYPE=Debug    DEPS=FULL
+##    - os: linux
+##      env: COMPILER=gcc   CMAKE_BUILD_TYPE=Debug    DEPS=FULL  CODECOV=yes
     - os: osx
       env: COMPILER=clang CMAKE_BUILD_TYPE=Debug    DEPS=FULL
 
 #    - os: linux
 #      env: COMPILER=icc   CMAKE_BUILD_TYPE=Release  DEPS=MINI
-    - os: linux
-      env: COMPILER=gcc   CMAKE_BUILD_TYPE=Release  DEPS=MINI
+##    - os: linux
+##      env: COMPILER=gcc   CMAKE_BUILD_TYPE=Release  DEPS=MINI
     - os: osx
       env: COMPILER=clang CMAKE_BUILD_TYPE=Release  DEPS=MINI
 
-    - os: linux
-      env: COMPILER=gcc   CMAKE_BUILD_TYPE=Release  DEPS=FULL
+##    - os: linux
+##      env: COMPILER=gcc   CMAKE_BUILD_TYPE=Release  DEPS=FULL
 #    - os: linux
 #      env: COMPILER=icc   CMAKE_BUILD_TYPE=Release  DEPS=FULL
     - os: osx
