--- a/.travis.yml
+++ b/.travis.yml
@@ -66,7 +66,7 @@ before_install:
     - if [ $TRAVIS_OS_NAME == osx ]; then brew update-reset; fi
 
     # homebrew Python stuff...
-    #- if [ $TRAVIS_OS_NAME == osx ]; then brew upgrade python; fi
+    - if [ $TRAVIS_OS_NAME == osx ]; then brew upgrade numpy; fi
     #- if [ $TRAVIS_OS_NAME == osx ]; then brew install python@2; fi
     #- if [ $TRAVIS_OS_NAME == osx ]; then export CMAKE_ARGS="${CMAKE_ARGS} -DPYTHON_LIBRARY=$(python-config --prefix)/lib/libpython2.7.dylib -DPYTHON_INCLUDE_DIR=$(python-config --prefix)/include/python2.7"; fi
 #    - if [ $TRAVIS_OS_NAME == osx ]; then brew upgrade python; fi
@@ -207,7 +207,7 @@ install:
 
     # Python & NumPy (installing always as needed for the Python module build)
     - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then export APT_PACKAGES="${APT_PACKAGES} python3-dev python3-numpy-dev"; fi
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export BREW_PACKAGES="${BREW_PACKAGES} numpy"; fi
+    #- if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export BREW_PACKAGES="${BREW_PACKAGES} numpy"; fi
     - if [[ $DEPS == 'FULL' ]]; then export CMAKE_ARGS="${CMAKE_ARGS} -DPYTHON=ON"; fi 
     - if [[ $DEPS == 'MINI' ]]; then export CMAKE_ARGS="${CMAKE_ARGS} -DPYTHON=OFF"; fi 
 
