previous commit was wrong. This one is better. Also, added a test file.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -213,6 +213,7 @@ TESTS = \
   test_strmatch.pro \
   test_strsplit.pro \
   test_structures.pro \
+  test_struct_assign.pro \
   test_suite.pro \
   test_systime.pro \
   test_tag_names.pro \
