--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -123,6 +123,7 @@ TESTS = \
   test_get_lun.pro \
   test_get_screen_size.pro \
   test_gh00178.pro \
+  test_gh00716.pro \
   test_grib.pro \
   test_hash.pro \
   test_hdf5.pro \
