--- a/.travis.yml
+++ b/.travis.yml
@@ -284,12 +284,12 @@ script:
     - $SEDCMD '/test_n_tags.pro/d'           testsuite/Makefile.am # TODO!
     - $SEDCMD '/test_obj_isa.pro/d'          testsuite/Makefile.am # TODO!
     - $SEDCMD '/test_obj_new.pro/d'          testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_plot_ranges.pro/d'      testsuite/Makefile.am # TODO!
+## AC 20200430    - $SEDCMD '/test_plot_ranges.pro/d'      testsuite/Makefile.am # TODO!
     - $SEDCMD '/test_resolve_routine.pro/d'  testsuite/Makefile.am # TODO!
     - $SEDCMD '/test_rounding.pro/d'         testsuite/Makefile.am # TODO!
-##    - $SEDCMD '/test_simplex.pro/d'          testsuite/Makefile.am # TODO!
+## AC 20200427   - $SEDCMD '/test_simplex.pro/d'          testsuite/Makefile.am # TODO!
     - $SEDCMD '/test_step.pro/d'             testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_typename.pro/d'         testsuite/Makefile.am # TODO!
+## AC 20200430    - $SEDCMD '/test_typename.pro/d'         testsuite/Makefile.am # TODO!
     - $SEDCMD '/test_wait.pro/d'             testsuite/Makefile.am # TODO!
 
     - mkdir build
