--- a/.travis.yml
+++ b/.travis.yml
@@ -259,7 +259,9 @@ install:
 
     # apt-get/brew invocation
     - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo apt-get install --no-install-recommends -y $APT_PACKAGES; fi
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then for pkg in $BREW_PACKAGES; do echo install $pkg >> Brewfile; done; brew bundle; fi
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then for pkg in $BREW_PACKAGES; do echo install $pkg >> Brewfile; done; fi
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then cat Brewfile; fi
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew bundle; fi
 
 script:
     # antlr
