--- a/appveyor.yml
+++ b/appveyor.yml
@@ -76,7 +76,7 @@ install:
       {
         # scripts/XXX.msys make gdl/mingw/mingw32 and load it.
         cd c:/projects/gdl
-        $env:GMNAME="GraphicsMagick-1.3.30"
+        $env:GMNAME="GraphicsMagick-1.3.29-1"
         $env:WXNAME="wxWidgets-3.0.2-17"
         $env:LOCALM32="c:/projects/gdl/mingw/$env:mname"
         c:/msys64/usr/bin/bash.exe -lc 'cd $OLDPWD &&. ./scripts/appveyor_1.msys'
@@ -347,7 +347,8 @@ build_script:
       }
   # Given that a GM-Q32 directory will not be present in mingw/, GMNAME can be anything to trigger inclusion
   # in the appveyor_gdl build: The distribution is created in appveyor_1.msys from the repo.
-  - set GMNAME=GraphicsMagick-1.3.27
+  #- set GMNAME=GraphicsMagick-1.3.27
+  - set GMNAME=GraphicsMagick-1.3.29-1
   - PowerShell c:\projects\gdl\scripts\ps1\make_gdl.ps1
   # Any message sent to stderr in appeyor.yml can be counted as an error, unless it is generated in 
   # a script.  Hence make_gdl.ps1, and only real hang-ups are failures.
