--- a/.travis.yml
+++ b/.travis.yml
@@ -99,8 +99,7 @@ install:
     ## OPTIONAL DEPENDENCIES
     ##
 
-    # readline (OSX & Linux) / no more editline (May 2020)
-    #TODO! - see https://github.com/gnudatalanguage/gdl/issues/227
+    # readline
     - if [[ $DEPS == 'FULL' && $TRAVIS_OS_NAME == 'linux' ]]; then export APT_PACKAGES="${APT_PACKAGES} libreadline-gplv2-dev"; fi
     - if [[ $DEPS == 'FULL' && $TRAVIS_OS_NAME == 'linux' ]]; then export CMAKE_ARGS="${CMAKE_ARGS} -DREADLINE=ON"; fi
 
@@ -193,12 +192,6 @@ install:
     - if [[ $DEPS == 'FULL' ]]; then export CMAKE_ARGS="${CMAKE_ARGS} -DEIGEN3=ON"; fi 
     - if [[ $DEPS == 'MINI' ]]; then export CMAKE_ARGS="${CMAKE_ARGS} -DEIGEN3=OFF"; fi 
 
-    # pslib (only Linux - TODO!)
-    - if [[ $DEPS == 'FULL' && $TRAVIS_OS_NAME == 'linux' ]]; then export APT_PACKAGES="${APT_PACKAGES} pslib-dev"; fi
-    - if [[ $DEPS == 'FULL' && $TRAVIS_OS_NAME == 'linux' ]]; then export CMAKE_ARGS="${CMAKE_ARGS} -DPSLIB=ON"; fi 
-    - if [[ $DEPS == 'MINI' ]]; then export CMAKE_ARGS="${CMAKE_ARGS} -DPSLIB=OFF"; fi 
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export CMAKE_ARGS="${CMAKE_ARGS} -DPSLIB=OFF"; fi 
- 
     # ECCODES API 
 #    - if [[ $DEPS == 'FULL' && $TRAVIS_OS_NAME == 'linux' ]]; then export APT_PACKAGES="${APT_PACKAGES} libeccodes-dev"; fi
     - if [[ $DEPS == 'FULL' && $TRAVIS_OS_NAME == 'linux' ]]; then export APT_PACKAGES="${APT_PACKAGES} libgrib-api-dev"; fi
@@ -269,29 +262,6 @@ script:
     - if [ -v ANTLR ]; then git diff -G '(^[ANTLR 2.7.7 (])' | tee diff.log; fi
     - if [ -v ANTLR -a `cat diff.log | wc -l` -gt 0 ]; then travis_terminate 1; fi;
     - if [ -v ANTLR ]; then cd ..; fi
-
-    # TEMPORARILY disabling tests that did not work at "day zero" (i.e. SF -> github migration)
-#    - $SEDCMD '/test_bytscl.pro/d'           testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_dicom.pro/d'            testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_container.pro/d'        testsuite/Makefile.am # TODO! not ready
-    - $SEDCMD '/test_fft_leak.pro/d'         testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_file_delete.pro/d'      testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_file_search.pro/d'      testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_file_test.pro/d'        testsuite/Makefile.am # TODO! 2 errors on Dangling 
-    - $SEDCMD '/test_fix.pro/d'              testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_formats.pro/d'          testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_image_statistics.pro/d' testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_make_dll.pro/d'         testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_n_tags.pro/d'           testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_obj_isa.pro/d'          testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_obj_new.pro/d'          testsuite/Makefile.am # TODO!
-## AC 20200430    - $SEDCMD '/test_plot_ranges.pro/d'      testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_resolve_routine.pro/d'  testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_rounding.pro/d'         testsuite/Makefile.am # TODO!
-## AC 20200427   - $SEDCMD '/test_simplex.pro/d'          testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_step.pro/d'             testsuite/Makefile.am # TODO!
-## AC 20200430    - $SEDCMD '/test_typename.pro/d'         testsuite/Makefile.am # TODO!
-    - $SEDCMD '/test_wait.pro/d'             testsuite/Makefile.am # TODO!
 
     - mkdir build
     - cd build
