2nd "make check" run properly from a script.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -382,9 +382,9 @@ after_build:
   - ps: copy scripts/rungdl.bat c:/projects/gdl/install/rungdl.bat
   - ps: copy -r src/pro install/gdl/gdllib
   - 7z a gdl_build.zip install build
-  -  cmd /c C:\msys64\usr\bin\bash.exe -lc "cd /c/projects/gdl/build/gdl/msys 
- && make check"
-
+  # -  C:\msys64\usr\bin\bash.exe -lc "cd /c/projects/gdl/build/gdl/msys  && make check"
+  - C:\msys64\usr\bin\bash.exe -lc "cd /c/projects/gdl &&. scripts/rungdl.msys"
+  
 artifacts:
   - path: gdl_build.zip
     name: GDL
